getfirst removed